--- a/index.html
+++ b/index.html
@@ -3,6 +3,33 @@
 
 <head>
     <title>Bubble Popper</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            text-align: center;
+        }
+
+        h1 {
+            color: #2b6cb0;
+        }
+
+        #bubble-grid {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 10px;
+        }
+
+        #bubble-grid div {
+            width: 80px;
+            height: 80px;
+            background-color: #87ceeb;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 
 <body>
