--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Bubble Popper</title>
     <style>
         body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            height: 100vh;
+            margin: 0;
             font-family: Arial, sans-serif;
             background-color: #f0f8ff;
-            text-align: center;
         }
+
         h1 {
             color: #2b6cb0;
         }
+
         #bubble-grid {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
             gap: 10px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
+
         .bubble {
             width: 80px;
             height: 80px;
@@ -25,26 +38,36 @@
             align-items: center;
             justify-content: center;
             cursor: pointer;
+            transition: transform 0.2s;
         }
+
+        .bubble:hover {
+            transform: scale(1.05);
+        }
+
         .popped {
             background-color: #d1d1d1;
+            transform: scale(0.9);
         }
     </style>
 </head>
+
 <body>
     <h1>Bubble Popper</h1>
     <div id="bubble-grid"></div>
+
     <script>
         const grid = document.getElementById('bubble-grid');
+
         function createBubbles() {
             for (let i = 0; i < 25; i++) {
                 const bubble = document.createElement('div');
                 bubble.className = 'bubble';
-                bubble.textContent = "Bubble";
                 bubble.addEventListener('click', popBubble);
                 grid.appendChild(bubble);
             }
         }
+
         function popBubble(event) {
             const bubble = event.target;
             bubble.classList.add('popped');
@@ -52,7 +75,9 @@
                 bubble.classList.remove('popped');
             }, 1000);
         }
+
         createBubbles();
     </script>
 </body>
+
 </html>
